--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,11 @@
         "sizes": "512x512",
         "type": "image/png"
       },
-      
+      {
+        "src": "public/512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      },
       {
         "src": "public/64x64.png",
         "sizes": "64x64",
