--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,19 +10,32 @@
       {
         "src": "public/1024x1024.png",
         "sizes": "1024x1024",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "maskable"
       },
-      
-      
+      {
+        "src": "public/256x256.png",
+        "sizes": "256x256",
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
+        "src": "public/512x512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any"
+      },
       {
         "src": "public/64x64.png",
         "sizes": "64x64",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any"
       },
       {
         "src": "public/32x32.png",
         "sizes": "32x32",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any"
       },
       {
         "src": "public/16x16.png",
