--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,7 @@
         "src": "public/1024x1024.png",
         "sizes": "1024x1024",
         "type": "image/png",
-        "purpose": "maskable"
+        "purpose": "any"
       },
       {
         "src": "public/256x256.png",
@@ -40,7 +40,8 @@
       {
         "src": "public/16x16.png",
         "sizes": "16x16",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any"
       }
     ]
 
