--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,6 +26,12 @@
         "purpose": "any"
       },
       {
+        "src": "public/192x192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any"
+      },
+      {
         "src": "public/64x64.png",
         "sizes": "64x64",
         "type": "image/png",
