--- a/public/manifest.json
+++ b/public/manifest.json
@@ -42,14 +42,12 @@
       {
         "src": "public/32x32.png",
         "sizes": "32x32",
-        "type": "image/png",
-        "purpose": "any"
+        "type": "image/png"
       },
       {
         "src": "public/16x16.png",
         "sizes": "16x16",
-        "type": "image/png",
-        "purpose": "any"
+        "type": "image/png"
       }
     ]
 
