--- a/public/manifest.json
+++ b/public/manifest.json
@@ -36,8 +36,7 @@
       {
         "src": "public/64x64.png",
         "sizes": "64x64",
-        "type": "image/png",
-        "purpose": "any"
+        "type": "image/png"
       },
       {
         "src": "public/32x32.png",
