--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,41 +10,41 @@
     "description": "A todolist app.",
     "icons": [
       {
-        "src": "public/1024x1024.png",
+        "src": "public/duomi.png",
         "sizes": "1024x1024",
         "type": "image/png",
         "purpose": "markable"
       },
       {
-        "src": "public/256x256.png",
+        "src": "public/duomi.png",
         "sizes": "256x256",
         "type": "image/png",
         "purpose": "any"
       },
       {
-        "src": "public/512x512.png",
+        "src": "public/duomi.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any"
       },
       {
-        "src": "public/192x192.png",
+        "src": "public/duomi.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any"
       },
       {
-        "src": "public/64x64.png",
+        "src": "public/duomi.png",
         "sizes": "64x64",
         "type": "image/png"
       },
       {
-        "src": "public/32x32.png",
+        "src": "public/duomi.png",
         "sizes": "32x32",
         "type": "image/png"
       },
       {
-        "src": "public/16x16.png",
+        "src": "public/duomi.png",
         "sizes": "16x16",
         "type": "image/png"
       }
