--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,43 +13,13 @@
       "src": "public/duomi.png",
       "sizes": "1024x1024",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "markable"
     },
     {
-      "src": "public/duomi.png",
-      "sizes": "256x256",
+      "src": "public/256x256.png",
+      "sizes": "1024x1024",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "public/duomi.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "public/duomi.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "public/duomi.png",
-      "sizes": "64x64",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "public/duomi.png",
-      "sizes": "32x32",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "public/duomi.png",
-      "sizes": "16x16",
-      "type": "image/png",
-      "purpose": "any"
+      "purpose": "markable"
     }
   ]
 }
