--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,12 +12,8 @@
     {
       "src": "public/duomi.png",
       "sizes": "1024x1024",
-      "type": "image/png"
-    },
-    {
-      "src": "public/256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "markable"      
     }
   ]
 }
